fix bottom overflow jikan issue

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -441,11 +441,11 @@ ul {
     }
 
     .project-details {
-        font-size: 25px;
+        font-size: 22px;
     }
 
     .jikan-details {
-        font-size: 21px;
+        font-size: 18px;
     }
 
     .click-to-open {
